--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">gles_workshop_kai_niklas</string>
+    <string name="app_name">GLES_Template</string>
 </resources>
